- New computation of significance tests in multiple groups.
	- Standard errors and p-values of multiple groups are now based on the single-group SE derived by Lashley & Bond (1997)
	- You can get the old behavior by setting RR(..., se = "SOREMO")
	- PLEASE NOTE: We changed the default behavior. From version 1.5 on, you get the new Lashley & Bond (1997) standard errors by default.

#------------------------------------------------------------
# ---- Changes in TripleR version 1.4.1
#------------------------------------------------------------

- Compability update: Had to react to changes in package plyr/reshape2. Now requires plyr >= 1.8.2

#------------------------------------------------------------
# ---- Changes in TripleR version 1.4
#------------------------------------------------------------

- getEffects function can now export effects with group means added (set `gm=TRUE`; see ?getEffects)
- Some changes for CRAN compability, internal restructuring


#------------------------------------------------------------
# ---- Changes in TripleR version 1.2.1
#------------------------------------------------------------

- changed order of authorship
- much less time for checking examples

#------------------------------------------------------------
# ---- Changes in TripleR version 1.2
#------------------------------------------------------------

- Now with correct citation information, see `citation("TripleR")`
- New sanity check: If double entries are present, now a warning is given. (Before version 1.2, only the uninformative "Aggregation requires fun.aggregate: length used as default" was printed)
- General R 3.0.2 compability

#------------------------------------------------------------
# ---- Changes in TripleR version 1.1.7  ----------------------
#------------------------------------------------------------

- Minor changes to be compatible with ggplot 0.9.2
- Finally got rid of the R CMD check warnings about global bindings
